--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,4 +1,5 @@
 .hero {
+  height: 1013px;
   padding: 70px $padding-lr;
   position: relative;
 
@@ -34,40 +35,52 @@
     }
   }
 
-  &__img-box {
-    margin-top: 50px;
+  .img-box {
     width: 100%;
+    height: 1013px;
     overflow: hidden;
 
+    //   &--first {
+    //
+    //     overflow: hidden;
+    //   }
+
+    //   &--second {
+    //     height: 650px;
+    //     overflow: hidden;
+    //   }
+
+    //   &--third {
+    //     height: 325px;
+    //     overflow: hidden;
+    //   }
+
     .img-color-bg {
+      height: 1013px;
       position: absolute;
       top: -100px;
-      left: 0;
-      z-index: -1;
-      overflow: hidden;
+      left: 20px;
+      z-index: -1000;
+
+      object-fit: cover;
     }
 
-    .img-grid {
-      position: absolute;
-      top: 80%;
-      overflow: hidden;
-    }
+    // .img-grid {
+    //   height: inherit;
+    //   position: absolute;
+    //   top: 52%;
 
-    .img-side-shape {
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      overflow: hidden;
-    }
+    //   object-fit: cover;
+    // }
 
-    .img-top-shape {
-      display: none;
-    }
-  }
+    // .img-side-shape {
+    //   height: inherit;
+    //   position: absolute;
+    //   left: -147px;
+    //   bottom: 98px;
 
-  &__img-content-bg {
-    width: 100%;
-    overflow-x: hidden;
+    //   object-fit: cover;
+    // }
   }
 }
 
@@ -222,7 +235,7 @@
 }
 
 .testimonials {
-  .testimonials-desktop{
+  .testimonials-desktop {
     display: none;
   }
   padding: 50px 16px;
@@ -254,7 +267,6 @@
       display: flex;
       align-items: flex-end;
       gap: 20px;
-      
 
       img {
         width: 80px;
@@ -290,9 +302,9 @@
 }
 
 .hire-us {
-  .projects{
+  .projects {
     padding: 0 $padding-lr;
-  }  
+  }
 
   .title-shadow {
     position: relative;
@@ -391,7 +403,7 @@
 }
 
 .gallery {
-  .gallery-desktop{
+  .gallery-desktop {
     display: none;
   }
   padding: 100px 16px;
@@ -411,30 +423,30 @@
 }
 
 .experience {
-  &__container {    
+  &__container {
     padding-top: 100px;
     padding-bottom: 60px;
   }
 
-  .section-title{
+  .section-title {
     width: 50%;
   }
 
   &__text-box {
-    padding-left: 16px;       
+    padding-left: 16px;
   }
 
   &__marquee {
     //height: 32px;
     padding: 10px;
     margin-bottom: 60px;
-    overflow-x: hidden;       
+    overflow-x: hidden;
   }
 
   &__marquee-content {
     //height: 32px;
     white-space: nowrap;
-    opacity: 0.63;    
+    opacity: 0.63;
 
     &--first,
     &--third {
@@ -450,7 +462,7 @@
       gap: 40px;
     }
 
-    .tool{
+    .tool {
       display: inline-block;
       height: 32px;
     }
