--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -48,8 +48,8 @@
     justify-content: center;
     align-items: center;
 
-    i {      
-      transform: translateX(4px);
+    i {
+      transform: translateX(3px);
     }
   }
 }
@@ -106,10 +106,19 @@
     }
 
     &__content {
-      flex: 0 1 40%;      
+      flex: 0 1 40%;
 
       display: flex;
       justify-content: space-between;
     }
+  }
+}
+
+/* breakpoint 1660px */
+
+@media screen and (min-width: 1660px) {
+  .footer__container {
+    padding-left: 245px;
+    padding-right: 245px;
   }
 }
